--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -1,1 +1,16 @@
-\part{Einführung}
+
+
+\section*{Einführung}
+
+Im Rahmen des Moduls Leistungselektronik und elektrische Antriebssysteme (EAT) stehen mehrere Labortage zur Verfügung um das theoretische Wissen zu festigen und ein praktisches Verständnis zu erhalten.
+Unterschiedliche Aufgabenstellungen zu verschiedenen Themen aus dem Unterricht können dazu genutzt werden.
+Zu einer der Aufgabenstellungen soll ein Laborbericht verfasst werden.\\
+
+Dieses Dokument setzt sich mit der Synchronmaschine auseinander und fasst den Schaltungsaufbau, die Messresultate und die Erkenntnisse daraus zusammen.\\
+
+
+
+
+\section*{Zusammenfassung}
+
+blablabalbalaall de Andy hed alles eleige gmacht blablablablabal ond hed en riese Penis blablanal
