--- a/Versuch.tex
+++ b/Versuch.tex
@@ -1,3 +1,36 @@
 
-\part{Versuche}
-\section{Inbetriebnahme}
+\section*{Versuche}
+
+hier Foto von Versuchsaufbau allgemein, mit den drei Maschinen
+
+\subsection*{Materialliste}
+
+
+
+\begin{center}
+\begin{tabular}{|L{0.8 \textwidth}|l|}
+ \hline
+ \rowcolor[gray]{.8} \textbf{Bezeichnung} & \textbf{Nr}  \\
+ \hline
+ Messtrennverstärker 1  & xxx  \\
+\hline
+Messtrennverstärker 2  & xxx  \\
+\hline
+Amperezange  & xxx  \\
+\hline
+Oszilloskop  & xxx  \\
+\hline
+Multimeter  & xxx  \\
+\hline
+\end{tabular}
+\end{center}
+
+
+\subsection*{Versuch 1}
+
+Der erste Versuch dient dazu die verschiedenen Einheiten in Betrieb zu nehmen und vorzubereiten.
+\subsubsection*{Schaltungsaufbau}
+
+
+
+\subsubsection*{Messresultate}
