--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -7,6 +7,7 @@ Unterschiedliche Aufgabenstellungen zu verschiedenen Themen aus dem Unterricht k
 Zu einer der Aufgabenstellungen soll ein Laborbericht verfasst werden.\\
 
 Dieses Dokument setzt sich mit der Synchronmaschine auseinander und fasst den Schaltungsaufbau, die Messresultate und die Erkenntnisse daraus zusammen.\\
+Insbesondere wird das Verhalten der SM am Netz als Generator und Motor, sowie als Generator im Inselbetrieb untersucht.
 
 
 
