--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \newcolumntype{R}[1]{>{\raggedleft\arraybackslash}p{#1}} % rechtsbündig mit Breitenangabe
 \usepackage{colortbl}
 
-
+\graphicspath{{figures/}}
 
 
 % end of Andy's includes
