--- a/Versuch.tex
+++ b/Versuch.tex
@@ -169,7 +169,9 @@ Die Kennlinie entspricht der Magnetisierungskennlinie der Synchronmaschine.\\
 
 Im Kurzschlussfall($U_1$ = 0V) fällt die induzierte Spannung $U_p$ über der Statorwicklung $\Delta U$ ab. Abhängig vom Erregerstrom verändert sich die induzierte Spannung und somit auch der Phasenstrom $I_1$ resp. $I_{ph}$.
 Mit der Kurzschlusskennlinie soll dieser Zusammenhang grafisch dargestellt werden.
-Auch in diesem Aufbau wird die SM mit der Gleichstrommaschine bei der Nenndrehzahl   betrieben.
+Auch in diesem Aufbau wird die SM mit der Gleichstrommaschine bei der Nenndrehzahl   betrieben.\\
+
+\vspace{1cm}
  
  
 \begin{figure}[H]
@@ -236,7 +238,87 @@ und somit:
 
 $$\underline{\underline{L_d}} = \frac{150 V }{j \cdot 8 A \cdot 2 \cdot \pi \cdot 50 Hz} = \underline{\underline{59.7 mH}}$$
 
+\newpage
 
+
+
+\subsubsection*{Schwebeverfahren}
+Zur Ermittlung der Längs -und Querreaktanz wird in diesem Versuch das Schwebeverfahren angewendet. Dazu wird die SM über die Gleichstrommaschine mit einem kleinen Schlupf betrieben. Gleichzeitig wird der Stator der SM mit reduzierter Spannung (Variac) gespeist. Die Erregerwicklung wird für diesen Versuch nicht betrieben.\\
+\vspace{0.4cm}
+
+
+ \begin{figure}[H]
+    \centering
+        \includegraphics[ %trim=0.5cm 0.5cm 0.5cm 0.5cm,
+         scale = 0.45]{Schwebeverfahren}
+    \caption{Schaltungsaufbau im VZS}
+    \label{fig:abb1}
+\end{figure}
+
+
+Die Phasenspannung am Stator wurde mit dem Variac auf einen Effektivwert von ungefähr 50V gedrosselt (Abbildung 8). 
+
+
+\begin{figure}[H]
+    \centering
+        \includegraphics[ trim=0.5cm 9cm 0.5cm 9cm,
+         width=1\textwidth]{schwebeverfahren_U_1.pdf}
+    \caption{Phasenspannung $U_1$ resp $U_{ph}$}
+    \label{fig:abb1}
+\end{figure}
+
+
+\newpage
+
+Der zugehörige Phasenstrom:\\
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+        \includegraphics[% trim=0.5cm 9cm 0.5cm 9cm,
+         width=0.8\textwidth]{schwebeverfahren_I_ph.pdf}
+    \caption{Phasenstrom $I_1$ resp $I_{ph}$}
+    \label{fig:abb1}
+\end{figure}
+
+
+Da die Polradspannung $U_p$ beim Schwebeverfahren 0V beträgt, fällt die gesamte Spannung $U_1$ über der Impedanz der Maschine ab. 
+Zur Bestimmung der Längsreaktanz $X_d$, resp. Querreaktanz $X_q$ wird der Verlauf des Phasenstroms betrachtet (Abbildung 9).\\
+\vspace{0.4cm}
+
+\underline{Längsreaktanz}\\
+\vspace{0.2cm}
+Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom maximal ist  berechnet (zb. t = 0,7s). Zu diesem Zeitpunkt ist die Hauptinduktivität am kleinsten aufgrund des geringen Luftspalts  , ein grösserer Phasenstrom kann fliessen.
+
+\begin{center}
+\begin{Large}
+$ \underline{\underline{L_d}}= \frac{\frac{U_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{I_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{5.8 A}{\sqrt{2}} } = \underline{\underline{41 mH}}$\\
+\end{Large}
+\end{center}
+
+\textcolor{red}{Begründen wieso der Wert für $Ld$ so stark abweicht von den berechneten 60mH}
+
+
+\newpage
+
+
+
+
+\underline{Querreaktanz}\\
+\vspace{0.2cm}
+Die Querreaktanz wird zum Zeitpunkt, wenn der Strom minimal ist  berechnet (zb. t = 0,55s). Zu diesem Augenblick ist die Hauptinduktivität am grössten aufgrund des grossen Luftspalts  , ein kleinerer Phasenstrom kann fliessen.
+
+\begin{center}
+\begin{Large}
+$ \underline{\underline{L_q}}= \frac{\frac{U_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{I_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{3.9 A}{\sqrt{2}} } = \underline{\underline{61 mH}}$\\
+\end{Large}
+\end{center}
+
+
+
+
+
+\vspace{0.4cm}
+\textbf{Verwendete Messwerkzeuge}:  Oszilloskop, Amperezange($I_{ph}$),\\ Messtrennverstärker 1 ($U_{ph}$) 
 
 
 
