Struktur apasst --> gemäss email theo

--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -1,7 +1,12 @@
 
 
-\section*{Einführung}
 
+\tableofcontents
+
+\newpage
+\part{Einführung}
+
+\section{Einleitung}
 Im Rahmen des Moduls Leistungselektronik und elektrische Antriebssysteme (EAT) stehen mehrere Labortage zur Verfügung um das theoretische Wissen zu festigen und ein praktisches Verständnis zu erhalten. 
 Unterschiedliche Aufgabenstellungen zu verschiedenen Themen aus dem Unterricht können dazu genutzt werden.
 Zu einer der Aufgabenstellungen soll ein Laborbericht verfasst werden.\\
@@ -12,6 +17,6 @@ Insbesondere wird das Verhalten der SM am Netz als Generator und Motor, sowie al
 
 
 
-\section*{Zusammenfassung}
+\section{Zusammenfassung}
 
 blablabalbalaall de Andy hed alles eleige gmacht blablablablabal ond hed en riese Penis blablanal
