--- a/Schlussteil.tex
+++ b/Schlussteil.tex
@@ -1,5 +1,14 @@
-\part*{Schlussteil}
+\part{Schlussteil}
 
 
 
-\section*{Fazit} %über gelerntes und Kommentare
+\section{Fazit} %über gelerntes und Kommentare
+
+
+\section{Erkenntnisse}
+
+\section{Verzeichnisse}
+
+Was wodsch do inetätsche ?? Abbildungsverzeichnis, quellen ?? --> Drigschosse
+
+\section{Anhang}
