--- a/Versuch.tex
+++ b/Versuch.tex
@@ -1,17 +1,17 @@
 \begin{flushleft}
-\section*{Versuche}
+\part{Versuche}
 
 
 
 
+\section{Übersicht}
 
-
-\subsection*{Laboreinrichtung}
+\subsection{Laboreinrichtung}
 
 
 hier Foto von Versuchsaufbau allgemein, mit den drei Maschinen
 
-\subsubsection*{Maschinensatz}
+\subsection{Maschinensatz}
 
 
 
@@ -38,7 +38,7 @@ Schleifring ASM &10 kW &2&50 Hz& 230/400 V& 1420 $\frac{1}{min}$\\
 
 
 
-\subsubsection*{Messeinrichtungen}
+\subsection{Messeinrichtungen}
 
 
 
@@ -68,7 +68,7 @@ Wattmeter   & -  \\
 \end{tabular}
 
 
-\subsubsection*{Speisungen und Belastungen}
+\subsection{Speisungen und Belastungen}
 
 \begin{tabular}{|L{0.3 \textwidth}|l|}
  \hline
@@ -86,12 +86,12 @@ Kastenwiderstand & Belastung ohmsch  \\
 
 
 \newpage
-\subsection*{Inbetriebsetzung}
+\section{Inbetriebsetzung}
 Als erstes sollen die Gleichstrommaschine sowie die ASM in Betrieb genommen werden und für die folgenden Messungen eingestellt werden.
-\subsubsection*{Gleichstrommaschine}
+\subsection{Gleichstrommaschine}
 Die GM wird so eingestellt, dass sie beim Einschalten auf eine Drehzahl von 1500 $\frac{1}{min}$ hochfährt. Dies entspricht gerade der Nenndrehzahl der SM.
 
-\subsubsection*{ASM}
+\subsection{ASM}
 Die Asynchronmaschine wird im späteren Verlauf als Dämpfung für den SM genutzt. 
 Da es sich um eine Schleifringläufer ASM handelt, kann über den Rotorkreis ein Widerstand zugeschalten werden. Dieser begrenzt den Anlaufstrom. Nach dem Hochfahren werden die Schleifringe kurzgeschlossen und die ASM kann als Kurzschlussläufer betrachtet werden.
 
@@ -100,10 +100,10 @@ Da es sich um eine Schleifringläufer ASM handelt, kann über den Rotorkreis ein
 
 
 
-\subsection*{Maschinenkennwerte}
+\section{Maschinenkennwerte}
 In diesem Abschnitt werden die charakteristischen Kennwerte der SM ermittelt.
 
-\subsubsection*{Leerlaufkennlinie}
+\subsection{Leerlaufkennlinie}
 Mit der Leerlaufkennlinie wird der Zusammenhang der induzierten Phasenspannung (Effektivwert) in Abhängigkeit des Erregerstroms dargestellt. Für diesen Versuch muss die SM mit der Gleichstrommaschine bei Nenndrehzahl gehalten werden (1500 $\frac{1}{min}$).
 Da die SM unbelastet ist, fliesst kein Strom $I_1$ durch die Statorwicklung, $\Delta U$ beträgt 0 und die Polradspannung (induzierte Spannung) entspricht der Phasenspannung $U_1$ resp. $U_{ph}$. \\
 
@@ -165,7 +165,7 @@ Die Kennlinie entspricht der Magnetisierungskennlinie der Synchronmaschine.\\
 
 
 
-\subsubsection*{Kurzschlusskennlinie}
+\subsection{Kurzschlusskennlinie}
 
 Im Kurzschlussfall($U_1$ = 0V) fällt die induzierte Spannung $U_p$ über der Statorwicklung $\Delta U$ ab. Abhängig vom Erregerstrom verändert sich die induzierte Spannung und somit auch der Phasenstrom $I_1$ resp. $I_{ph}$.
 Mit der Kurzschlusskennlinie soll dieser Zusammenhang grafisch dargestellt werden.
@@ -210,7 +210,7 @@ Auch die Kurzschlusskennlinie verhält sich linear. Der Effektivwert des Phasens
 
 
 \newpage
-\subsubsection*{Längsreaktanz $X_d$}
+\subsection{Längsreaktanz $X_d$}
 
 Anhand der Messresultat vom Leerlauf-resp. Kurzschlussversuch lässt sich die Längsreaktanz $X_d$ berechnen. Da die SM mit der Nenndrehzahl betrieben wurde, dreht sich der Rotor mit der selben Winkelgeschwindigkeit wie das Statordrehfeld. In diesem Betriebsfall kann entsprechend nur die Längsreaktanz bestimmt werden.\\
 
@@ -242,7 +242,7 @@ $$\underline{\underline{L_d}} = \frac{150 V }{j \cdot 8 A \cdot 2 \cdot \pi \cdo
 
 
 
-\subsubsection*{Schwebeverfahren}
+\subsection{Schwebeverfahren}
 Zur Ermittlung der Längs -und Querreaktanz wird in diesem Versuch das Schwebeverfahren angewendet. Dazu wird die SM über die Gleichstrommaschine mit einem kleinen Schlupf betrieben. Gleichzeitig wird der Stator der SM mit reduzierter Spannung (Variac) gespeist. Die Erregerwicklung wird für diesen Versuch nicht betrieben.\\
 \vspace{0.4cm}
 
@@ -314,11 +314,30 @@ $ \underline{\underline{L_q}}= \frac{\frac{U_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \
 \end{center}
 
 
-
-
-
 \vspace{0.4cm}
 \textbf{Verwendete Messwerkzeuge}:  Oszilloskop, Amperezange($I_{ph}$),\\ Messtrennverstärker 1 ($U_{ph}$) 
+
+
+\newpage
+\section{SM als Generator im Inselbetrieb}
+\subsection{Belastungskennlinie}
+\subsection{Spannungsregelung}
+
+
+\newpage
+\section{SM am Netz}
+\subsection{Synchronisation}
+\subsection{Variation der Wirkleistung}
+\subsection{Variation der Blindleistung}
+
+
+
+
+
+
+
+
+
 
 
 
