--- a/Versuch.tex
+++ b/Versuch.tex
@@ -291,7 +291,7 @@ Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom maximal ist  berechnet (zb
 
 \begin{center}
 \begin{Large}
-$ \underline{\underline{L_d}}= \frac{\frac{U_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{I_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{5.8 A}{\sqrt{2}} } = \underline{\underline{41 mH}}$\\
+$ \underline{\underline{L_d}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{5.8 A}{\sqrt{2}} } = \underline{\underline{41 mH}}$\\
 \end{Large}
 \end{center}
 
@@ -309,7 +309,7 @@ Die Querreaktanz wird zum Zeitpunkt, wenn der Strom minimal ist  berechnet (zb. 
 
 \begin{center}
 \begin{Large}
-$ \underline{\underline{L_q}}= \frac{\frac{U_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{I_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{3.9 A}{\sqrt{2}} } = \underline{\underline{61 mH}}$\\
+$ \underline{\underline{L_q}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{3.9 A}{\sqrt{2}} } = \underline{\underline{61 mH}}$\\
 \end{Large}
 \end{center}
 
