Edit Xd&Xq. see text and laboratory manual

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -287,15 +287,15 @@ Zur Bestimmung der Längsreaktanz $X_d$, resp. Querreaktanz $X_q$ wird der Verla
 
 \underline{Längsreaktanz}\\
 \vspace{0.2cm}
-Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom maximal ist  berechnet (zb. t = 0,7s). Zu diesem Zeitpunkt ist die Hauptinduktivität am kleinsten aufgrund des geringen Luftspalts  , ein grösserer Phasenstrom kann fliessen.
+Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom $I_1$ minimal ist  berechnet (zb. t = 0,55s). Mit dem kleinsten  Luftspalt ist der magnetische Fluss $\Phi$ am grössten. Da die Durchflutung $\Theta$ gleich bleibt, muss der magnetische Leitwert $G_m$ auch am grössten sein. Mit $L=N^2*G_m$ muss somit die Induktivität $L$ gross und der Strom $I_1$ minimal sein zum Zeitpunkt des kleinsten Luftspalt.
+\textcolor{red}{Iz geits uf... Chuntmä da drus?}
+
 
 \begin{center}
 \begin{Large}
-$ \underline{\underline{L_d}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{5.8 A}{\sqrt{2}} } = \underline{\underline{41 mH}}$\\
+$ \underline{\underline{L_d}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{3.9 A}{\sqrt{2}} } = \underline{\underline{61 mH}}$\\
 \end{Large}
 \end{center}
-
-\textcolor{red}{Begründen wieso der Wert für $Ld$ so stark abweicht von den berechneten 60mH}
 
 
 \newpage
@@ -305,11 +305,11 @@ $ \underline{\underline{L_d}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot
 
 \underline{Querreaktanz}\\
 \vspace{0.2cm}
-Die Querreaktanz wird zum Zeitpunkt, wenn der Strom minimal ist  berechnet (zb. t = 0,55s). Zu diesem Augenblick ist die Hauptinduktivität am grössten aufgrund des grossen Luftspalts  , ein kleinerer Phasenstrom kann fliessen.
+Die Querreaktanz wird zum Zeitpunkt, wenn der Strom maximal ist  berechnet (zb. t = 0,7s). 
 
 \begin{center}
 \begin{Large}
-$ \underline{\underline{L_q}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{3.9 A}{\sqrt{2}} } = \underline{\underline{61 mH}}$\\
+$ \underline{\underline{L_q}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot f \cdot \frac{\hat{I}_{ph}}{\sqrt{2}} }  = \frac{\frac{75 V}{\sqrt{2}}}{j \cdot 2 \cdot \pi \cdot 50 \cdot \frac{5.8 A}{\sqrt{2}} } = \underline{\underline{41 mH}}$\\
 \end{Large}
 \end{center}
 
