--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,8 @@
 
 
 % end of Andy's includes
+\usepackage{subcaption}
+\usepackage{graphicx}
 
 \newcommand{\cImage}[2][0.5]{
 	\begin{figure}[h!]
