--- a/Versuch.tex
+++ b/Versuch.tex
@@ -321,16 +321,17 @@ $ \underline{\underline{L_q}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot
 \newpage
 \section{SM als Generator im Inselbetrieb}
 \subsection{Belastungskennlinie}
-Bei diesem Versuch wirkt die Synchronmaschine als Generator im Inselbetrieb. Der Gleichstrommaschine dient als Antrieb.
+Bei diesem Versuch wirkt die Synchronmaschine als Generator im Inselbetrieb. Die Gleichstrommaschine dient als Antrieb.
 \vspace{0.3cm}
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
         \includegraphics[ trim=1cm 16.5cm 7.6cm 5.7cm, clip,
          width=0.8\textwidth]{SM_Inselbetrieb_Uebersicht.pdf}
     \caption{Übersicht SM im Inselbetrieb}
     \label{fig:abb1}
 \end{figure}
-Bei konstantem  Erregerstrom und konstanter Drehzahl wird eine Phasenspannung $U_1$, ein Phasenstrom $I_1$ und der Polradwinkel $\beta$ bei verschiedenen Lasten gemessen. Zum einen werden die Daten für eine kapazitive, eine induktive und eine ohmsche Last jeweils mit $I_1eff = 3.8A$ gemessen
+\vspace{0.3cm}
+Bei konstantem  Erregerstrom und konstanter Drehzahl wird die Phasenspannung $U_1$, der Phasenstrom $I_1$ und der Polradwinkel $\vartheta$ bei verschiedenen Lasten gemessen. Zum einen werden die Daten bei einer kapazitiven, einer induktiven und einer ohmschen Last jeweils mit $I_{1_{eff}} = 3.8A$ gemessen
 
 \begin{itemize}
 \item \makebox[5cm][l]{$I_{err} = $ 0.8 A  }            konstanter Erregerstrom
@@ -357,6 +358,8 @@ Bei konstantem  Erregerstrom und konstanter Drehzahl wird eine Phasenspannung $U
 \end{minipage}
 \caption{Einphasen Ersatzschaltbild der SM im Inselbetrieb}
 \end{figure}
+
+
 
 
 \begin{figure}[ht!]
