Added some Matlabplot (sorry Pascal)

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -373,8 +373,8 @@ Zuerst wurde die SM in den Leerlaufbetrieb versetzt um die Polradspannung bei ei
 \vspace{0.5cm}
 
 \begin{figure}[H]
-        \includegraphics[ %trim=0.5cm 1cm 0.5cm 1cm,
-         width=0.8\textwidth]{631_Bild4_Ohmsch.pdf}
+    \centering
+    \includegraphics[width=\textwidth]{631_Ohmsch}
     \caption{Messung mit dem KO}
     \label{fig:abb1}
 \end{figure}
@@ -416,8 +416,8 @@ Zuerst wurde die SM in den Leerlaufbetrieb versetzt um die Polradspannung bei ei
 \vspace{0.5cm}
 
 \begin{figure}[H]
-        \includegraphics[ %trim=0.5cm 1cm 0.5cm 1cm,
-         width=0.8\textwidth]{631_Bild5_Kapazitiv.pdf}
+    \centering
+    \includegraphics[width=\textwidth]{631_Kapazitiv}
     \caption{Messung mit dem KO}
     \label{fig:abb1}
 \end{figure}
@@ -469,8 +469,10 @@ An der Messkurve ist zu erkennen, dass der Phasenstrom der Phasenspannung um ca.
 \vspace{0.5cm}
 
 \begin{figure}[H]
+\centering
         \includegraphics[ %trim=0.5cm 1cm 0.5cm 1cm,
-         width=0.8\textwidth]{631_Bild6_Induktiv.pdf}
+        % width=0.8\textwidth]{631_Bild6_Induktiv.pdf}
+				width=\textwidth]{631_Induktiv}
     \caption{Messung mit dem KO}
     \label{fig:abb1}
 \end{figure}
